--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -54,5 +54,10 @@
         android:key="zephyr_carrier_label_settings"
         android:title="@string/carrier_label_settings_title"
         android:summary="@string/carrier_label_settings_summary" />
+
+    <Preference
+           android:key="ticker"
+           android:title="@string/ticker_screen_title"
+           android:fragment="com.android.settings.zephyr.StatusBarTickerSettings" />
 </PreferenceScreen>
 
