--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -89,7 +89,7 @@
 
     <drawable name="fp_enrollment_header_landscape">#009688</drawable>
 
-    <color name="memory_normal">#ff009587</color>
+    <color name="memory_normal">@*android:color/material_pixel_blue_bright</color>
     <color name="memory_moderate">#ffF3B300</color>
     <color name="memory_low">#ffff9700</color>
     <color name="memory_critical">#ffff5621</color>
