--- a/res/xml/ticker.xml
+++ b/res/xml/ticker.xml
@@ -43,12 +43,12 @@
         android:key="ticker_colors"
         android:title="@string/colors_title">
 
-         <net.margaritov.preference.colorpicker.ColorPickerPreference
+         <net.zephyr.colorpicker.preference.ColorPickerPreference
             android:key="status_bar_ticker_text_color"
             android:title="@string/text_title"
             android:defaultValue="#ffffffff" />
 
-         <net.margaritov.preference.colorpicker.ColorPickerPreference
+         <net.zephyr.colorpicker.preference.ColorPickerPreference
             android:key="status_bar_ticker_icon_color"
             android:title="@string/icon_title"
             android:defaultValue="#ffffffff" />
