--- a/res/xml/security_settings_pin_sub.xml
+++ b/res/xml/security_settings_pin_sub.xml
@@ -36,7 +36,7 @@
                 android:summary="@string/owner_info_settings_summary"/>
 
 
-        <cyanogenmod.preference.CMSecureSettingSwitchPreference
+        <com.android.settings.preference.SecureSettingSwitchPreference
             android:key="lockscreen_visualizer"
             android:title="@string/lockscreen_visualizer_title"
             android:defaultValue="true"/>
