--- a/res/xml/carrierlabel_settings.xml
+++ b/res/xml/carrierlabel_settings.xml
@@ -36,8 +36,5 @@
             android:key="status_bar_carrier_font_size"
             android:title="@string/status_bar_carrier_size"
             android:max="23"
-            settings:minimum="4"
-            settings:defaultVal="14"
-            settings:unitsLeft=""
-            settings:unitsRight="dp" />
+            settings:defaultValue="14" />
 </PreferenceScreen>
